components/immich/overlays/dev/postgresql-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgresql
  namespace: immich-dev
spec:
  template:
    spec:
      containers:
      - name: postgresql
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
