components/immich/overlays/dev/postgresql-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgresql
  namespace: immich-dev
